big project refactor!!! - finish cache refactor - rework the api alot - redo how listings are created to reduce duplicated code